# relon

./: .gitignore  CHANGELOG.md  CORE_VALUES_MEMO.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  clippy.toml  lib_with_private.relon  main_test.relon  rust-toolchain.toml  test_schema.relon  tmp_test.relon  tmp_test.rs  todo.md
crates/relon-abi/: Cargo.toml
crates/relon-abi/src/: buffer.rs  inplace_return.rs  lib.rs  schema_canonical.rs  verifier.rs
crates/relon-abi/tests/: buffer_roundtrip_proptest.rs
crates/relon-analyzer/: Cargo.toml
crates/relon-analyzer/src/: ban_unsafe_types.rs  cap.rs  capability_check.rs  code_actions.rs  complete.rs  const_fold.rs  constraints.rs  core_schemas.rs  decorator_names.rs  diagnostic.rs  directive_names.rs  extend.rs  generics.rs  goto_def.rs  hover.rs  infer.rs  inlay_hints.rs  inputs.rs  lib.rs  main_return.rs  main_sig.rs  modules.rs  references.rs  rename.rs  resolve.rs  root_schemas.rs  schema.rs  sig.rs  signature_help.rs  std_wrapper_signatures.rs  stdlib_signatures.rs  symbols.rs  tree.rs  typecheck.rs  workspace.rs  workspace_build.rs
crates/relon-analyzer/tests/: ban_unsafe_types.rs  cross_module.rs  duplicate_field.rs  expressions.rs  generics.rs  main_signature.rs  path_tail.rs  schema_methods.rs  stdlib_wrapper_return.rs  strict_matrix.rs  strict_mode.rs  sum_types.rs  tuples.rs  typehints.rs  v1_3_fixtures.rs  v1_4_fixtures.rs  v1_5_fixtures.rs  v1_6_fixtures.rs  v1_7_fixtures.rs  v1_8_fixtures.rs
crates/relon-aot-bench/: Cargo.toml  README.md  build.rs
crates/relon-aot-bench/src/: main.rs  wa.relon  wb.relon  wc.relon  wd.relon  we.relon  wf.relon  wg.relon
crates/relon-bench/: .gitignore  Cargo.toml
crates/relon-bench/benches/: HONESTY_POLICY.md  ascii_case_fold.rs  cmp_lua.rs  cmp_lua_dict_list_trace.rs  cranelift_aot_vs_tree_walk.rs  cranelift_aot_vs_wasm_aot.rs  harness_v1.rs  jit_failure_modes.rs  sso.rs  string_stdlib.rs  trace_jit_hot_loop.rs  wasm_aot_vs_tree_walk.rs
crates/relon-bench/src/: bench_stats.rs  lib.rs  main.rs  quiescence.rs
crates/relon-bench/tests/: cmp_lua_consistency.rs  lua_smoke.rs  methodology_validators.rs  quiescence_check.rs  w4_iv_overflow_elim_smoke.rs  w5_iv_overflow_elim_diag.rs  w5_w6_recorder_trace.rs
crates/relon-bytecode/: Cargo.toml
crates/relon-bytecode/src/: arena.rs  compile.rs  evaluator.rs  hot_counter.rs  lib.rs  op.rs  trace_dispatch.rs  vm.rs
crates/relon-bytecode/tests/: bytecode_sandbox.rs  closure_dispatch.rs  f64_div_mod_zero_trap.rs  float_arith_parity.rs  hot_counter_dispatch.rs  list_sum_range_desugar.rs  nested_range_matmul.rs  partial_resume_sandbox.rs  probe_w_sources.rs  range_pipeline_desugar.rs  smoke.rs  trace_dispatch_switch.rs
crates/relon-cap/: Cargo.toml
crates/relon-cap/src/: lib.rs
crates/relon-cli/: Cargo.toml  build.rs
crates/relon-cli/src/: main.rs
crates/relon-cli/tests/: backend_flag.rs  cache_cold_hot_parity.rs  cache_subcommand.rs  check_format_json.rs  docs_contract.rs  pretty_flag.rs
crates/relon-codegen-llvm/: Cargo.toml
crates/relon-codegen-llvm/examples/: dump_audit_w1_w2_w6.rs  dump_w3_artifacts.rs  dump_w7_artifacts.rs  fib_indirect_microbench.rs
crates/relon-codegen-llvm/src/: cocompile.rs  emitter.rs  error.rs  evaluator.rs  lib.rs  mcjit_mm.rs  sandbox.rs  state.rs  str_helpers.rs  vtable.rs  wasi_host.rs  wasm_link.rs
crates/relon-codegen-llvm/tests/: anon_dict_return_three_way.rs  aot_cap_gate.rs  aot_float.rs  aot_list.rs  aot_list_param_return.rs  aot_wasm.rs  aot_wasm_parity.rs  aot_wasm_std_wasi.rs  aot_wasm_wasi.rs  aot_wasm_wasi_fs_spike.rs  cocompile_buffer.rs  cocompile_inline.rs  cocompile_wasm.rs  cross_region_object_four_way.rs  gap_callnative.rs  gap_constlist.rs  inplace_return_four_way.rs  list_min_four_way.rs  list_string_return_three_way.rs  list_sum_overflow_four_way.rs  llvm_arith_smoke.rs  llvm_bounds_check.rs  llvm_computed_int_list.rs  llvm_divmod_trap.rs  llvm_emit_object_smoke.rs  llvm_f64_arith.rs  llvm_f64_mod.rs  llvm_host_target_cpu.rs  llvm_int_overflow.rs  llvm_nested_matmul_smoke.rs  llvm_recursive_fib.rs  llvm_step_budget.rs  llvm_vs_cranelift_smoke.rs  llvm_w16_inline3_repro.rs  llvm_w16_quicksort.rs  llvm_w17_binary_search.rs  llvm_w18_prime_count.rs  llvm_w19_matmul.rs  llvm_w1_w2_perf.rs  llvm_w1_w2_smoke.rs  (+26 more)
crates/relon-codegen-native/: Cargo.toml
crates/relon-codegen-native/src/: bytecode_bridge.rs  cache.rs  codegen.rs  error.rs  evaluator.rs  glob_helper.rs  lib.rs  object_cache_integration.rs  sandbox.rs  schema_cache.rs  trace_glob_helper.rs  trace_ic.rs  trace_inline.rs  trace_install.rs  trace_recording.rs  trap_handler.rs  vtable.rs
crates/relon-codegen-native/tests/: aot_string_let_slot.rs  cache_hmac_absence.rs  cache_roundtrip.rs  call_native_dispatch.rs  closure_dispatch.rs  control_flow_extended.rs  helloworld_arith.rs  host_fn_capability.rs  multi_thread_run_main.rs  object_cache_integration.rs  select_and_block.rs  stdlib_length.rs  str_concat_inline_exec.rs  str_concat_n_trace_exec.rs  str_contains_inline_exec.rs  str_glob_match_trace_exec.rs  trace_jit_inline_smoke.rs  trace_jit_tail_smoke.rs  trap_bounds.rs  trap_div_zero.rs  vtable_indirection.rs  vtable_latency_breakdown.rs
crates/relon-codegen-wasm/: Cargo.toml
crates/relon-codegen-wasm/examples/: dce_size_dump.rs
crates/relon-codegen-wasm/src/: abi.rs  cache.rs  (+10 more)
crates/relon-eval-api/: Cargo.toml
crates/relon-evaluator/: Cargo.toml
crates/relon-fmt/: Cargo.toml
crates/relon-ir/: Cargo.toml  build.rs
crates/relon-lsp/: Cargo.toml
crates/relon-object-cache/: Cargo.toml
crates/relon-object-link/: Cargo.toml
crates/relon-parser/: Cargo.toml
crates/relon-rs-build/: Cargo.toml
crates/relon-rs-demo/: Cargo.toml  build.rs
crates/relon-rs-macro/: Cargo.toml  build.rs
crates/relon-rs-shims/: Cargo.toml
crates/relon-test-harness/: Cargo.toml
crates/relon-trace-abi/: Cargo.toml
crates/relon-trace-emitter/: Cargo.toml
crates/relon-trace-jit/: Cargo.toml
crates/relon-trace-recorder/: Cargo.toml
crates/relon-unicode/: Cargo.toml
crates/relon-util/: Cargo.toml
(+1162 files in other folders)
