[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/kookyleo/relon"
homepage = "https://github.com/kookyleo/relon"
description = "A programmable configuration language that extends JSON"

[workspace.dependencies]
ordered-float = { version = "4.2", features = ["serde"] }
memchr = "2.7"
thiserror = "2"
miette = "7.6.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
clap = "4.4"
anyhow = "1.0"
proptest = "1"
# v3+ a-3: HTTPS fetch for remote `#import "https://..."`.
# Pure-Rust, sync-only, TLS via rustls so we don't pull native-tls /
# OpenSSL into the host build. Feature-gated to non-wasm32 targets in
# `relon-evaluator` so the browser playground does not link it.
ureq = { version = "3", default-features = false, features = ["rustls"] }
hex = "0.4"

# Internal crates declared with both `path` and `version` so each can
# be published to crates.io independently while local builds keep
# using the in-tree source. A version-less path dependency is a
# `cargo publish` blocker.
relon = { path = "crates/relon", version = "0.1.0" }
relon-parser = { path = "crates/relon-parser", version = "0.1.0" }
relon-analyzer = { path = "crates/relon-analyzer", version = "0.1.0" }
relon-eval-api = { path = "crates/relon-eval-api", version = "0.1.0" }
relon-evaluator = { path = "crates/relon-evaluator", version = "0.1.0" }
relon-fmt = { path = "crates/relon-fmt", version = "0.1.0" }
relon-ir = { path = "crates/relon-ir", version = "0.1.0" }
relon-codegen-wasm = { path = "crates/relon-codegen-wasm", version = "0.1.0" }
relon-codegen-native = { path = "crates/relon-codegen-native", version = "0.1.0" }
relon-trace-jit = { path = "crates/relon-trace-jit", version = "0.1.0" }
relon-trace-recorder = { path = "crates/relon-trace-recorder", version = "0.1.0" }
relon-lsp = { path = "crates/relon-lsp", version = "0.1.0" }
relon-wasm = { path = "crates/relon-wasm", version = "0.1.0" }
relon-test-harness = { path = "crates/relon-test-harness", version = "0.1.0" }

# Default release profile — throughput-tuned. Fat LTO + single
# codegen unit so the optimizer sees the whole program; downstream
# embedders keep `unwind` panics so `Drop` still runs (mutex
# poisoning, etc.). Pay the longer build time once, ship the fastest
# binary.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true

# Size-tuned profile for the WASM build and minimal CLI distribution.
# Same fat-LTO whole-program view as `release`, but trades runtime
# speed (`opt-level = "z"`) and unwinding (`panic = "abort"`) for a
# ~50%+ smaller binary. Build with `cargo build --profile release-small`.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
