[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/kookyleo/relon"
homepage = "https://github.com/kookyleo/relon"
description = "A programmable configuration language that extends JSON"

[workspace.dependencies]
ordered-float = { version = "4.2", features = ["serde"] }
memchr = "2.7"
thiserror = "2"
miette = "7.6.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
# v6-fix-D2-J cold-start: declare clap with `default-features = false`
# at the workspace level so per-crate `features = [...]` lists can
# narrow the feature set without cargo silently unioning the default
# bundle (color / suggestions / wrap_help) back in. Each binary that
# imports clap re-enables exactly what it needs.
clap = { version = "4.4", default-features = false }
anyhow = "1.0"
proptest = "1"
# v3+ a-3: HTTPS fetch for remote `#import "https://..."`.
# Pure-Rust, sync-only, TLS via rustls so we don't pull native-tls /
# OpenSSL into the host build. Feature-gated to non-wasm32 targets in
# `relon-evaluator` so the browser playground does not link it.
ureq = { version = "3", default-features = false, features = ["rustls"] }
hex = "0.4"
# P2-15: FxHashMap for trace-recorder + trace-jit hot lookups. The
# `rustc-hash` hasher is unkeyed FNV-style — substantially faster than
# the default SipHash for small integer keys like SsaVar / NodeId on
# the trace-record / trace-install paths. Serde wire format is
# unchanged (HashMap serialises as a sequence; the hasher is internal).
rustc-hash = "1.1"
# P2-14: ArrayVec for inline small-vec storage on the trace-recorder
# lowering hot path. `LowerOutcome::Emit` carries guards_before /
# guards_after with at most 4 entries (StrConcatN cap), so a stack-
# resident ArrayVec eliminates the per-op heap allocation the previous
# `Vec<GuardKind>` shape paid.
arrayvec = "0.7"

# Internal crates declared with both `path` and `version` so each can
# be published to crates.io independently while local builds keep
# using the in-tree source. A version-less path dependency is a
# `cargo publish` blocker.
# v5-β-2 stage 4: workspace-level default-features = false lets the
# wasm32-targeting `relon-wasm` opt out of the cranelift-aot default
# without pulling cranelift-jit / region into a target where neither
# builds. Native consumers (relon-cli, relon-bench, downstream hosts)
# re-enable `default-features = true` in their own dependency entries.
relon = { path = "crates/relon", version = "0.1.0", default-features = false }
relon-parser = { path = "crates/relon-parser", version = "0.1.0" }
relon-analyzer = { path = "crates/relon-analyzer", version = "0.1.0" }
relon-eval-api = { path = "crates/relon-eval-api", version = "0.1.0" }
relon-evaluator = { path = "crates/relon-evaluator", version = "0.1.0" }
relon-fmt = { path = "crates/relon-fmt", version = "0.1.0" }
relon-ir = { path = "crates/relon-ir", version = "0.1.0" }
relon-bytecode = { path = "crates/relon-bytecode", version = "0.1.0" }
relon-codegen-native = { path = "crates/relon-codegen-native", version = "0.1.0" }
relon-object-cache = { path = "crates/relon-object-cache", version = "0.1.0" }
relon-object-link = { path = "crates/relon-object-link", version = "0.1.0" }
relon-trace-abi = { path = "crates/relon-trace-abi", version = "0.1.0" }
relon-trace-jit = { path = "crates/relon-trace-jit", version = "0.1.0" }
relon-trace-recorder = { path = "crates/relon-trace-recorder", version = "0.1.0" }
relon-trace-emitter = { path = "crates/relon-trace-emitter", version = "0.1.0" }
relon-lsp = { path = "crates/relon-lsp", version = "0.1.0" }
relon-wasm = { path = "crates/relon-wasm", version = "0.1.0" }
relon-test-harness = { path = "crates/relon-test-harness", version = "0.1.0" }

# Default release profile — throughput-tuned. Fat LTO + single
# codegen unit so the optimizer sees the whole program; downstream
# embedders keep `unwind` panics so `Drop` still runs (mutex
# poisoning, etc.). Pay the longer build time once, ship the fastest
# binary.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true

# Size-tuned profile for the WASM build and minimal CLI distribution.
# Same fat-LTO whole-program view as `release`, but trades runtime
# speed (`opt-level = "z"`) and unwinding (`panic = "abort"`) for a
# ~50%+ smaller binary. Build with `cargo build --profile release-small`.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"

# v6-fix-D2-J cold-start profile for the `relon` CLI binary.
# Inherits the throughput-tuned `release` settings (fat LTO + single
# codegen unit + symbol strip) and adds `panic = "abort"` so the
# linker drops the per-function unwinding tables (`.eh_frame` /
# `.gcc_except_table`) and the personality routine. Together those
# tables weigh ~1 MB on the CLI; dropping them shaves roughly the
# same amount off the ELF loader's relocation / page-fault tax
# during fresh-process startup — which is what dominates the W11
# `relon run` cold-start row (in-process work is already ~830 µs;
# the rest is pre-main). Library embedders that need unwinding for
# poisoning / `Drop` semantics keep building under `release`; the
# CLI binary is the only entry that ships with `abort`. Build with
# `cargo build --profile release-cli -p relon-cli`.
[profile.release-cli]
inherits = "release"
panic = "abort"
