[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/kookyleo/relon"
homepage = "https://github.com/kookyleo/relon"
description = "A programmable configuration language that extends JSON"

[workspace.dependencies]
ordered-float = { version = "4.2", features = ["serde"] }
memchr = "2.7"
thiserror = "2"
miette = "7.6.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
# v6-fix-D2-J cold-start: declare clap with `default-features = false`
# at the workspace level so per-crate `features = [...]` lists can
# narrow the feature set without cargo silently unioning the default
# bundle (color / suggestions / wrap_help) back in. Each binary that
# imports clap re-enables exactly what it needs.
clap = { version = "4.4", default-features = false }
anyhow = "1.0"
proptest = "1"
# v3+ a-3: HTTPS fetch for remote `#import "https://..."`.
# Pure-Rust, sync-only, TLS via rustls so we don't pull native-tls /
# OpenSSL into the host build. Feature-gated to non-wasm32 targets in
# `relon-evaluator` so the browser playground does not link it.
ureq = { version = "3", default-features = false, features = ["rustls"] }
hex = "0.4"
# P2-15: FxHashMap for trace-recorder + trace-jit hot lookups. The
# `rustc-hash` hasher is unkeyed FNV-style — substantially faster than
# the default SipHash for small integer keys like SsaVar / NodeId on
# the trace-record / trace-install paths. Serde wire format is
# unchanged (HashMap serialises as a sequence; the hasher is internal).
rustc-hash = "1.1"
# P2-14: ArrayVec for inline small-vec storage on the trace-recorder
# lowering hot path. `LowerOutcome::Emit` carries guards_before /
# guards_after with at most 4 entries (StrConcatN cap), so a stack-
# resident ArrayVec eliminates the per-op heap allocation the previous
# `Vec<GuardKind>` shape paid.
arrayvec = "0.7"
# P2-12: ArcSwap for lock-free trace registry reads — `lookup_trace`
# is on the trace dispatch hot path; an `Arc::clone` of the wrapper
# replaces a reader-lock acquire on every call.
arc-swap = "1"
# P1-2: data-parallel parse + analyze for multi-module workspaces.
# Cold-start of a 3+ module entry pays a serial `parse + analyze`
# per import in the BFS pass; rayon lets a single BFS level fan its
# parse+analyze jobs across the global pool. Loader IO and ws-state
# mutation stay sequential — only the pure CPU work is parallelised.
rayon = "1"
# Stdlib JSON Schema parity wave: regex for `matches` + format
# predicates (`is_email` / `is_uri` / `is_ipv4` / `is_ipv6` / etc.).
# Pure-Rust, no DFA backtracking explosion; safe to expose to user
# predicates without a sandbox escape route.
regex = "1"

# Internal crates declared with both `path` and `version` so each can
# be published to crates.io independently while local builds keep
# using the in-tree source. A version-less path dependency is a
# `cargo publish` blocker.
# v5-β-2 stage 4: workspace-level default-features = false lets the
# wasm32-targeting `relon-wasm-bindings` opt out of the cranelift-aot
# default without pulling cranelift-jit / region into a target where
# neither builds. Native consumers (relon-cli, relon-bench, downstream
# hosts) re-enable `default-features = true` in their own dep entries.
relon = { path = "crates/relon", version = "0.1.0", default-features = false }
relon-parser = { path = "crates/relon-parser", version = "0.1.0" }
relon-analyzer = { path = "crates/relon-analyzer", version = "0.1.0" }
relon-eval-api = { path = "crates/relon-eval-api", version = "0.1.0" }
relon-evaluator = { path = "crates/relon-evaluator", version = "0.1.0" }
relon-fmt = { path = "crates/relon-fmt", version = "0.1.0" }
relon-ir = { path = "crates/relon-ir", version = "0.1.0" }
relon-codegen-cranelift = { path = "crates/relon-codegen-cranelift", version = "0.1.0" }
# Phase A bootstrap: LLVM-backed AOT backend (inkwell + llvm-sys 18.1
# pinned to the system LLVM 18.1.3 install). Lives in a separate
# crate so the cranelift JIT path stays the workspace-default and
# only hosts that opt into the `llvm-aot` feature on `relon` pay the
# LLVM build-time dep (system `llvm-config` + Polly dev headers).
relon-codegen-llvm = { path = "crates/relon-codegen-llvm", version = "0.1.0" }
relon-object-cache = { path = "crates/relon-object-cache", version = "0.1.0" }
relon-object-link = { path = "crates/relon-object-link", version = "0.1.0" }
relon-lsp = { path = "crates/relon-lsp", version = "0.1.0" }
relon-wasm-bindings = { path = "crates/relon-wasm-bindings", version = "0.1.0" }
relon-test-harness = { path = "crates/relon-test-harness", version = "0.1.0" }
# Phase 1 relon-as-Rust-library bridge: three new crates split along
# the build.rs / runtime / proc-macro boundary so each side can
# evolve independently.
#   * `relon-rs-shims`: link-time C ABI helpers + `SandboxState`
#     forward-compat shape.
#   * `relon-rs-build`: build.rs API that compiles `.relon` to `.o`
#     plus matching Rust binding files.
#   * `relon-rs-macro`: `include_relon!` proc-macro that splices the
#     build.rs-generated bindings into the consuming source.
relon-rs-shims = { path = "crates/relon-rs-shims", version = "0.1.0" }
relon-rs-build = { path = "crates/relon-rs-build", version = "0.1.0" }
relon-rs-macro = { path = "crates/relon-rs-macro", version = "0.1.0" }
# Leaf utility crate: byte-identical helpers (alignment math, Rust
# identifier checks) deduped out of the codegen / ABI / build crates.
# Depends on no other relon-* crate so it stays at the bottom of the
# dep graph.
relon-util = { path = "crates/relon-util", version = "0.1.0" }
# Leaf crate holding the canonical capability data types (CapabilityBit /
# NativeFnGate / Capabilities) shared by `relon-eval-api` and
# `relon-analyzer`. Depends on no other relon-* crate so it stays at the
# bottom of the dep graph and breaks the eval-api <-> analyzer cycle that
# forced the analyzer to mirror these types.
relon-cap = { path = "crates/relon-cap", version = "0.1.0" }
# Leaf crate holding the Unicode tables, case-folding / normalization
# algorithms, the SIMD ASCII fast path, and the glob matcher. Consumed
# by the tree-walk evaluator and the codegen backends. Depends on no
# other relon-* crate so it stays at the bottom of the dep graph and
# lets `relon-evaluator` drop its edge to `relon-ir` (the evaluator only
# ever needed these shared tables, never the IR surface).
relon-unicode = { path = "crates/relon-unicode", version = "0.1.0" }

# Default release profile — throughput-tuned. Fat LTO + single
# codegen unit so the optimizer sees the whole program; downstream
# embedders keep `unwind` panics so `Drop` still runs (mutex
# poisoning, etc.). Pay the longer build time once, ship the fastest
# binary.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true

# Size-tuned profile for the WASM build and minimal CLI distribution.
# Same fat-LTO whole-program view as `release`, but trades runtime
# speed (`opt-level = "z"`) and unwinding (`panic = "abort"`) for a
# ~50%+ smaller binary. Build with `cargo build --profile release-small`.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"

# v6-fix-D2-J cold-start profile for the `relon` CLI binary.
# Inherits the throughput-tuned `release` settings (fat LTO + single
# codegen unit + symbol strip) and adds `panic = "abort"` so the
# linker drops the per-function unwinding tables (`.eh_frame` /
# `.gcc_except_table`) and the personality routine. Together those
# tables weigh ~1 MB on the CLI; dropping them shaves roughly the
# same amount off the ELF loader's relocation / page-fault tax
# during fresh-process startup — which is what dominates the W11
# `relon run` cold-start row (in-process work is already ~830 µs;
# the rest is pre-main). Library embedders that need unwinding for
# poisoning / `Drop` semantics keep building under `release`; the
# CLI binary is the only entry that ships with `abort`. Build with
# `cargo build --profile release-cli -p relon-cli`.
#
# Phase G.W11 Phase 3 (≤ 1× LuaJIT cold-start gate): the same
# profile cross-compiled to `x86_64-unknown-linux-musl` produces a
# `static-pie` executable that no longer pulls glibc / libgcc_s /
# libm at runtime. The dynamic loader still maps the binary, but
# skips every per-symbol resolution and lazy binding step that the
# glibc build pays (`ldd` reports `statically linked`). On the s90
# bench host that drops W11 cold-start from 1.8 ms → 1.1 ms
# (σ ≈ 0; 1.72× faster, ~700 µs absolute), bringing Relon to
# 0.85× LuaJIT (1.3 ms reference) and landing the Phase 3 gate.
# Build with:
#     rustup target add x86_64-unknown-linux-musl
#     cargo build --profile release-cli \
#         --target x86_64-unknown-linux-musl -p relon-cli
# All workspace deps (cranelift, regex, ureq+rustls behind features,
# inkwell behind a feature) build under musl with the in-tree
# feature gate set — no extra system toolchain needed (rustc ships
# its own musl libc).
[profile.release-cli]
inherits = "release"
panic = "abort"
