[package]
name = "relon-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal ABI between Relon compiled backends: buffer protocol, layout, marshalling, verifier"
keywords = ["abi", "marshalling", "layout", "dsl", "config"]
categories = ["compilers", "config"]

[dependencies]
relon-eval-api = { workspace = true }
# `schema_lower` converts the analyzer's `SchemaDef` (over parser
# `TypeNode`s) into the canonical wire `Schema`, so both source crates
# stay on the dependency list.
relon-parser = { workspace = true }
relon-analyzer = { workspace = true }
ordered-float.workspace = true
# `schema_canonical` derives Serialize/Deserialize for the canonical
# `Schema` / `Field` / `TypeRepr` and serialises them through
# serde_json to compute the deterministic schema hash.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Used by `schema_canonical` to compute a deterministic 32-byte digest of
# every `#main` schema. Host and wasm codegen both call into this module
# so they agree on the schema hash carried in the `relon.abi` custom
# section.
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Property-based round-trip / verifier fuzzing for the binary handshake
# buffer (`buffer.rs` writer/reader + `verifier.rs`). Generates target
# return-shape values, writes them through `BufferBuilder`, reads them
# back, and asserts equality + a clean verifier pass — exercising the
# recursive host reader landed in a1660b62 across the value space.
proptest = { workspace = true }
