[package]
name = "relon-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic analysis layer for the relon language: name resolution, schema desugar, diagnostics"

[dependencies]
relon-parser = { path = "../relon-parser" }
miette = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
