[package]
name = "relon-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Semantic analysis layer for the Relon language: name resolution, schema desugar, diagnostics"
keywords = ["analyzer", "static-analysis", "dsl", "diagnostics", "schema"]
categories = ["compilers", "development-tools"]

[dependencies]
relon-parser = { workspace = true }
relon-cap = { workspace = true }
miette = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
