[package]
name = "relon-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Micro-benchmarks for the Relon evaluator (parse + eval timings on canned sources)"
publish = false

[features]
# Enable heap allocation profiling for `profile_alloc`. Off by default so
# the workspace `cargo build` / `cargo test` paths stay free of the
# profiler's global allocator override.
dhat-heap = ["dep:dhat"]

[dependencies]
relon-parser = { workspace = true }
relon-evaluator = { workspace = true }
# v5-β-2 stage 4: cranelift-AOT comparison bench. The wasm-AOT
# backend retired here; the bench crate now only depends on the
# cranelift-native AOT crate for cold/warm measurement against the
# tree-walker baseline. Bench is host-only so we pull the cranelift
# dep unconditionally.
relon-codegen-native = { workspace = true }
relon-ir = { workspace = true }
relon-eval-api = { workspace = true }
# v6-γ M5 trace-JIT hot-loop bench: depends on the trace-abi
# `TraceContext` / `TraceEntryStatus` and the trace-jit `TraceBuffer`
# types so the bench can drive an installed trace directly through
# `JITedTraceFn::invoke` without going through `run_main`.
relon-trace-abi = { workspace = true }
relon-trace-jit = { workspace = true }
# v6-ε-0-C: the `trace_jit_warm_tail` bench row installs a
# `CallConv::Tail` trace explicitly (vs the default-conv install path
# the `trace_jit_warm` / `trace_jit_warm_ic` rows go through) so the
# comparison is direct. Pulling cranelift-codegen here only exposes
# the `CallConv` enum to the bench surface.
cranelift-codegen = "0.131"
dhat = { version = "0.3", optional = true }

[dev-dependencies]
# Criterion 0.5.x: stage P0 measurement infra. Provides per-dimension
# corpus + statistical report (mean / median / stddev / outliers).
# Pinned to 0.5 to avoid upstream churn (0.6+ API / wasm tweaks).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# v5-γ cached-cold-start bench writes its cache pair into a per-run
# tempdir so concurrent bench threads stay isolated from each other.
tempfile = "3"

# Method-dispatch group uses `#main(List<Int> xs) ... xs.map((n) => n * 2)`
# so the receiver type is known statically — that requires the analyzer to
# resolve `.map` against the core `List` schema. Pulled in as a dev-dep so
# it does not leak into the (non-test) bench binary surface.
relon-analyzer = { workspace = true }

# `main.rs` is kept as a quick-eyeball binary (single cold run + 1000-iter
# steady-state mean, same shape as the legacy output) so contributors can
# read absolute magnitudes without spinning up the full criterion sampler.
# For serious measurement run `cargo bench -p relon-bench` (group below).

[[bench]]
name = "harness_v1"
harness = false
path = "benches/harness_v1.rs"

# v5-β-2 stage 4: cranelift-AOT cold/warm comparison against the
# tree-walker baseline. Two probes per scenario: `cold` (synthetic
# IR build + cranelift JIT finalize) and `warm` (preassembled
# evaluator, only `run_main(args)`). The warm probe is the
# "LuaJIT trace tier" target (sub-microsecond per call). The
# tree-walker baseline is the apples-to-apples competitor against
# `cold` for the typical configuration-reload workload. Run via
# `cargo bench -p relon-bench --bench cranelift_aot_vs_tree_walk`.
[[bench]]
name = "cranelift_aot_vs_tree_walk"
harness = false
path = "benches/cranelift_aot_vs_tree_walk.rs"

# v6-γ M5: trace-JIT hot-loop micro-bench. Three rows (tree_walk,
# cranelift_aot, trace_jit_warm) on a million-iter `acc += i` loop.
# Target for the trace-JIT row: < 5 ns / iter (LuaJIT trace tier).
# Run via `cargo bench -p relon-bench --bench trace_jit_hot_loop`.
[[bench]]
name = "trace_jit_hot_loop"
harness = false
path = "benches/trace_jit_hot_loop.rs"
