[package]
name = "relon-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Micro-benchmarks for the Relon evaluator (parse + eval timings on canned sources)"
publish = false

[features]
# Enable heap allocation profiling for `profile_alloc`. Off by default so
# the workspace `cargo build` / `cargo test` paths stay free of the
# profiler's global allocator override.
dhat-heap = ["dep:dhat"]

[dependencies]
relon-parser = { workspace = true }
relon-evaluator = { workspace = true }
# M2-C lever 1 (2026-05-21): the W12 bytecode row drives the concrete
# `BytecodeEvaluator::run_main_i64` typed fast-path to bypass the
# host-arg `HashMap<String, Value>` round-trip the trait-level
# `run_main` carries. Direct crate dep so the bench can name the
# concrete type rather than the `Box<dyn Evaluator>` trait object.
relon-bytecode = { workspace = true }
# M2-B phase 4d (2026-05-21): the bytecode VM is driven via the
# `relon::new_evaluator(src, Backend::Bytecode)` facade so the cmp_lua
# bench's bytecode row picks up whatever from-source envelope the
# `BytecodeEvaluator::from_source` pipeline currently honours. Sources
# outside the scalar envelope surface as `BackendError::Bytecode` and
# the bench row prints `n/a (UnsupportedOp)` rather than the row's
# numbers — matches the corpus four-way harness's soft-pass policy.
relon = { workspace = true }
# v5-β-2 stage 4: cranelift-AOT comparison bench. The wasm-AOT
# backend retired here; the bench crate now only depends on the
# cranelift-native AOT crate for cold/warm measurement against the
# tree-walker baseline. Bench is host-only so we pull the cranelift
# dep unconditionally.
relon-codegen-native = { workspace = true }
relon-ir = { workspace = true }
relon-eval-api = { workspace = true }
# v6-γ M5 trace-JIT hot-loop bench: depends on the trace-abi
# `TraceContext` / `TraceEntryStatus` and the trace-jit `TraceBuffer`
# types so the bench can drive an installed trace directly through
# `JITedTraceFn::invoke` without going through `run_main`.
relon-trace-abi = { workspace = true }
relon-trace-jit = { workspace = true }
# F-D7-D: cmp_lua W3 / W4 recorder-driven row references
# `STDLIB_IDX_CONTAINS` to assemble the matching `Op::Call` IR fixture.
relon-trace-recorder = { workspace = true }
# v6-ε-0-C: the `trace_jit_warm_tail` bench row installs a
# `CallConv::Tail` trace explicitly (vs the default-conv install path
# the `trace_jit_warm` / `trace_jit_warm_ic` rows go through) so the
# comparison is direct. Pulling cranelift-codegen here only exposes
# the `CallConv` enum to the bench surface.
cranelift-codegen = "0.131"
# v6-ε bench-rewrite (2026-05-19): the new `trace_jit_loop` row
# hand-builds a cranelift JIT module whose body runs the full N-iter
# loop internally (bypassing the recorder gap). Frontend + module +
# jit + native are needed for that build path; they pull in the same
# 0.131 line the workspace already pins for `relon-codegen-native`.
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-jit = "0.131"
cranelift-native = "0.131"
# `result_slot_offset()` / `host_hooks_offset()` are exposed by the
# trace-emitter crate; we link them in for the bench's
# `trace_jit_loop` row so the JIT fn writes through the canonical
# TraceContext field rather than hard-coding the byte offset.
relon-trace-emitter = { workspace = true }
dhat = { version = "0.3", optional = true }
# v6-λ-0 (bench methodology hardening): `bench_stats` post-processes
# criterion's `sample.json` per-row to extract p50/p90/p99/p99.9/max.
# Pulled in as non-dev deps so `cargo build -p relon-bench` exposes the
# library + the `bench_stats` binary without `--tests`.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Criterion 0.5.x: stage P0 measurement infra. Provides per-dimension
# corpus + statistical report (mean / median / stddev / outliers).
# Pinned to 0.5 to avoid upstream churn (0.6+ API / wasm tweaks).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# v5-γ cached-cold-start bench writes its cache pair into a per-run
# tempdir so concurrent bench threads stay isolated from each other.
tempfile = "3"

# Method-dispatch group uses `#main(List<Int> xs) ... xs.map((n) => n * 2)`
# so the receiver type is known statically — that requires the analyzer to
# resolve `.map` against the core `List` schema. Pulled in as a dev-dep so
# it does not leak into the (non-test) bench binary surface.
relon-analyzer = { workspace = true }

# `main.rs` is kept as a quick-eyeball binary (single cold run + 1000-iter
# steady-state mean, same shape as the legacy output) so contributors can
# read absolute magnitudes without spinning up the full criterion sampler.
# For serious measurement run `cargo bench -p relon-bench` (group below).

# v6-λ-1 (2026-05-19): mlua + LuaJIT for the Relon vs LuaJIT comparison
# rounds. `vendored` lets mlua bundle its own LuaJIT 2.1 source, so neither
# `scripts/install_luajit_2_1.sh` nor a system LuaJIT install is required for
# the bench crate to build. The `luajit` feature pins the trace-JIT-class
# runtime (vs the pure Lua interpreter). `macros` is needed for the
# `#[mlua::lua_module]` / `lua.create_function` ergonomics the smoke test
# exercises. Kept as a dev-dep so non-test consumers don't pull LuaJIT.
mlua = { version = "0.10", features = ["luajit", "vendored", "macros"] }

[[bench]]
name = "harness_v1"
harness = false
path = "benches/harness_v1.rs"

# v5-β-2 stage 4: cranelift-AOT cold/warm comparison against the
# tree-walker baseline. Two probes per scenario: `cold` (synthetic
# IR build + cranelift JIT finalize) and `warm` (preassembled
# evaluator, only `run_main(args)`). The warm probe is the
# "LuaJIT trace tier" target (sub-microsecond per call). The
# tree-walker baseline is the apples-to-apples competitor against
# `cold` for the typical configuration-reload workload. Run via
# `cargo bench -p relon-bench --bench cranelift_aot_vs_tree_walk`.
[[bench]]
name = "cranelift_aot_vs_tree_walk"
harness = false
path = "benches/cranelift_aot_vs_tree_walk.rs"

# v6-γ M5 → v6-ε bench-rewrite (2026-05-19): trace-JIT hot-loop
# micro-bench. The historical "Rust drives N invokes" rows are kept
# under the `dispatch_*` prefix as the M2-C → ε-0-A falsification
# chain reference, but the headline rows are now the loop-INSIDE
# variants (`tree_walk_loop`, `cranelift_aot_loop`, `trace_jit_loop`,
# `rust_native_loop`) which invoke the callee **once** and measure
# total / `HOT_LOOP_N`. See the bench module doc + the v6-ε
# bench-rewrite report for the methodology rationale.
# Run via `cargo bench -p relon-bench --bench trace_jit_hot_loop`.
[[bench]]
name = "trace_jit_hot_loop"
harness = false
path = "benches/trace_jit_hot_loop.rs"

# v6-lambda-2/3 (2026-05-19): Relon vs LuaJIT 12-workload paired bench.
# Implements the 12 adversarial workloads from
# `docs/internal/relon-vs-luajit-rigorous-plan.md` §3, with a Relon source
# + an equivalent Lua 5.1 source per workload. Same 6-trap hardening as
# `trace_jit_hot_loop`. Run via
# `cargo bench --bench cmp_lua` then post-process via `bench_stats`.
[[bench]]
name = "cmp_lua"
harness = false
path = "benches/cmp_lua.rs"

# F-D8 (2026-05-19): trace-JIT companion to W5 + W6 in `cmp_lua`. Runs
# the dict-string-key and list-numeric-key hot loops through hand-built
# cranelift JIT traces that exercise the new TraceOp::DictLookup +
# TraceOp::ListGet lowerings, plus a tree-walker baseline row for in-
# bench ratio context. Recorder integration is deferred — the IR walker
# does not yet recognise the source-side `d[keys[i]]` / `arr[i]`
# patterns; this bench's row demonstrates the emitter + runtime path
# is wired end-to-end so the recorder extension lands against a
# pre-validated lower-half.
# Run via `cargo bench -p relon-bench --bench cmp_lua_dict_list_trace`.
[[bench]]
name = "cmp_lua_dict_list_trace"
harness = false
path = "benches/cmp_lua_dict_list_trace.rs"

# 2026-05-21: trace-JIT failure-mode fixtures (abort / high-deopt /
# cold workload). Three workloads × three rows (tree_walk / cranelift_aot
# / trace_jit) covering paths the existing W1..W10 hot-loop suite does
# not touch — see the bench file header for the per-fixture hypothesis
# table. Same 6-trap hardening as `trace_jit_hot_loop` /  `cmp_lua`.
# Run via `cargo bench -p relon-bench --bench jit_failure_modes`.
[[bench]]
name = "jit_failure_modes"
harness = false
path = "benches/jit_failure_modes.rs"

# v3++ item 4 (2026-05-20): SIMD ASCII fast-path throughput. Compares
# the new `relon_ir::ascii_fold_simd` helper against a scalar
# `char::to_uppercase` / `to_lowercase` baseline across 100 B / 1 KB /
# 10 KB ASCII inputs and Upper / Lower / Title modes. Native bench
# runs exercise the autovec scalar path; wasm32 + simd128 numbers
# live in `docs/internal/wasm-bench-report-2026-05-16.md` appendix
# A.24. Run via `cargo bench -p relon-bench --bench ascii_case_fold`.
[[bench]]
name = "ascii_case_fold"
harness = false
path = "benches/ascii_case_fold.rs"

# Phase 1b (2026-05-21): SSO `SmolStr` micro-bench. Three row groups
# (construct / clone / concat) across short / cap-boundary / long
# payloads to verify the inline path is alloc-free and the heap
# fallback stays cheap. Run via
# `cargo bench -p relon-bench --bench sso`.
[[bench]]
name = "sso"
harness = false
path = "benches/sso.rs"

# v6-λ-0 (bench methodology hardening, 2026-05-19): post-processor for
# criterion's per-sample `sample.json` outputs. Walks
# `target/criterion/<group>/<dim>/<row>/new/sample.json` and prints a
# Markdown table of p50/p90/p99/p99.9/max per row. Run via
# `cargo run -p relon-bench --bin bench_stats -- <group_root>`.
[[bin]]
name = "bench_stats"
path = "src/bin/bench_stats.rs"
