[package]
name = "relon-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Micro-benchmarks for the Relon evaluator (parse + eval timings on canned sources)"
publish = false

[features]
# Enable heap allocation profiling for `profile_alloc`. Off by default so
# the workspace `cargo build` / `cargo test` paths stay free of the
# profiler's global allocator override.
dhat-heap = ["dep:dhat"]

# Phase C (2026-05-26): forward the `llvm-aot` cargo feature from the
# `relon` facade so the cmp_lua bench can compile in the
# `relon_llvm_aot` panel row. The feature is off by default — hosts
# without LLVM 18 dev headers stay green on the workspace `cargo build`
# / `cargo bench` paths. Activate via `cargo bench --features llvm-aot`
# (requires `LLVM_SYS_181_PREFIX=/usr/lib/llvm-18`).
llvm-aot = ["relon/llvm-aot", "dep:relon-codegen-llvm"]

[dependencies]
relon-parser = { workspace = true }
relon-evaluator = { workspace = true }
# The cmp_lua bench drives the AOT backend via the
# `relon::new_evaluator(src, Backend::CraneliftAot)` facade
# (`try_build_aot`); the `cranelift-aot` feature gates that row.
relon = { workspace = true, features = ["cranelift-aot"] }
# v5-β-2 stage 4: cranelift-AOT comparison bench. The wasm-AOT
# backend retired here; the bench crate now only depends on the
# cranelift-native AOT crate for cold/warm measurement against the
# tree-walker baseline. Bench is host-only so we pull the cranelift
# dep unconditionally.
relon-codegen-cranelift = { workspace = true }
# Phase C (2026-05-26): direct LLVM AOT evaluator for the cmp_lua
# `relon_llvm_aot` panel row. Optional + feature-gated; off by default
# so workspace builds without LLVM 18 dev headers stay green. The
# bench drives `LlvmAotEvaluator::from_source(src)` directly (rather
# than via the `relon::new_evaluator` facade) so the per-workload row
# can match on the concrete `LlvmError` shape and downgrade gracefully
# to an n/a row when the Phase B envelope rejects the source.
relon-codegen-llvm = { workspace = true, optional = true }
relon-ir = { workspace = true }
relon-eval-api = { workspace = true }
dhat = { version = "0.3", optional = true }
# v6-λ-0 (bench methodology hardening): `bench_stats` post-processes
# criterion's `sample.json` per-row to extract p50/p90/p99/p99.9/max.
# Pulled in as non-dev deps so `cargo build -p relon-bench` exposes the
# library + the `bench_stats` binary without `--tests`.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Criterion 0.5.x: stage P0 measurement infra. Provides per-dimension
# corpus + statistical report (mean / median / stddev / outliers).
# Pinned to 0.5 to avoid upstream churn (0.6+ API / wasm tweaks).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# v5-γ cached-cold-start bench writes its cache pair into a per-run
# tempdir so concurrent bench threads stay isolated from each other.
tempfile = "3"

# Method-dispatch group uses `#main(List<Int> xs) ... xs.map((n) => n * 2)`
# so the receiver type is known statically — that requires the analyzer to
# resolve `.map` against the core `List` schema. Pulled in as a dev-dep so
# it does not leak into the (non-test) bench binary surface.
relon-analyzer = { workspace = true }

# `main.rs` is kept as a quick-eyeball binary (single cold run + 1000-iter
# steady-state mean, same shape as the legacy output) so contributors can
# read absolute magnitudes without spinning up the full criterion sampler.
# For serious measurement run `cargo bench -p relon-bench` (group below).

# v6-λ-1 (2026-05-19): mlua + LuaJIT for the Relon vs LuaJIT comparison
# rounds. `vendored` lets mlua bundle its own LuaJIT 2.1 source, so neither
# `scripts/install_luajit_2_1.sh` nor a system LuaJIT install is required for
# the bench crate to build. The `luajit` feature pins the trace-JIT-class
# runtime (vs the pure Lua interpreter). `macros` is needed for the
# `#[mlua::lua_module]` / `lua.create_function` ergonomics the smoke test
# exercises. Kept as a dev-dep so non-test consumers don't pull LuaJIT.
mlua = { version = "0.10", features = ["luajit", "vendored", "macros"] }

[[bench]]
name = "harness_v1"
harness = false
path = "benches/harness_v1.rs"

# v5-β-2 stage 4: cranelift-AOT cold/warm comparison against the
# tree-walker baseline. Two probes per scenario: `cold` (synthetic
# IR build + cranelift JIT finalize) and `warm` (preassembled
# evaluator, only `run_main(args)`). The warm probe is the
# "LuaJIT trace tier" target (sub-microsecond per call). The
# tree-walker baseline is the apples-to-apples competitor against
# `cold` for the typical configuration-reload workload. Run via
# `cargo bench -p relon-bench --bench cranelift_aot_vs_tree_walk`.
[[bench]]
name = "cranelift_aot_vs_tree_walk"
harness = false
path = "benches/cranelift_aot_vs_tree_walk.rs"

# v6-lambda-2/3 (2026-05-19): Relon vs LuaJIT 12-workload paired bench.
# Implements the 12 adversarial workloads from
# `docs/internal/relon-vs-luajit-rigorous-plan.md` §3, with a Relon source
# + an equivalent Lua 5.1 source per workload. Same 6-trap hardening as
# `trace_jit_hot_loop`. Run via
# `cargo bench --bench cmp_lua` then post-process via `bench_stats`.
[[bench]]
name = "cmp_lua"
harness = false
path = "benches/cmp_lua.rs"

# v3++ item 4 (2026-05-20): SIMD ASCII fast-path throughput. Compares
# the new `relon_ir::ascii_fold_simd` helper against a scalar
# `char::to_uppercase` / `to_lowercase` baseline across 100 B / 1 KB /
# 10 KB ASCII inputs and Upper / Lower / Title modes. Native bench
# runs exercise the autovec scalar path; wasm32 + simd128 numbers
# live in `docs/internal/wasm-bench-report-2026-05-16.md` appendix
# A.24. Run via `cargo bench -p relon-bench --bench ascii_case_fold`.
[[bench]]
name = "ascii_case_fold"
harness = false
path = "benches/ascii_case_fold.rs"

# Phase 1b (2026-05-21): SSO `SmolStr` micro-bench. Three row groups
# (construct / clone / concat) across short / cap-boundary / long
# payloads to verify the inline path is alloc-free and the heap
# fallback stays cheap. Run via
# `cargo bench -p relon-bench --bench sso`.
[[bench]]
name = "sso"
harness = false
path = "benches/sso.rs"

# `#161` (2026-05-22): write-to-buffer micro-bench. Targets the
# `SmolStr::try_build_inline` fast path stdlib `to_lower` / `concat`
# helpers now route through for short ASCII payloads. Run via
# `cargo bench -p relon-bench --bench string_stdlib`.
[[bench]]
name = "string_stdlib"
harness = false
path = "benches/string_stdlib.rs"

# v6-λ-0 (bench methodology hardening, 2026-05-19): post-processor for
# criterion's per-sample `sample.json` outputs. Walks
# `target/criterion/<group>/<dim>/<row>/new/sample.json` and prints a
# Markdown table of p50/p90/p99/p99.9/max per row. Run via
# `cargo run -p relon-bench --bin bench_stats -- <group_root>`.
[[bin]]
name = "bench_stats"
path = "src/bin/bench_stats.rs"
